# LiteCoder

./: .gitignore  README.md  README_zh.md  pyproject.toml
litecoder/: __init__.py  __main__.py  agent.py  cli.py  config.py  context.py  i18n.py  llm.py  prompt.py  rules.py  session.py
litecoder/tools/: __init__.py  agent.py  bash.py  edit.py  write.py
tests/: test_core.py  test_tools.py
